# Security-Log-Auditor

./: .audit-suppress.example  .gitignore  MANIFEST.in  README.md  log_auditor.py  pyproject.toml
checks/linux/: auditd_config.py  auditd_rules.py  auditd_service.py  auth_logs.py  fim_detection.py  firewall_logging.py  journald.py  log_retention.py  log_shipper.py  noise_analysis.py  ntp_logging.py  selinux_logging.py  syslog_forwarding.py  utils.py
checks/macos/: bsm_audit.py  log_shipper.py  noise_analysis.py  uls.py
checks/windows/: audit_policy.py  event_log_config.py  log_shipper.py  noise_analysis.py  powershell_logging.py  sysmon.py
common/: coverage_matrix.py  edr_detection.py
core/: platform_utils.py  reporter.py  result.py  runner.py  suppression.py
templates/: report.html
tests/: conftest.py  test_linux_auditd_rules.py  test_linux_auditd_service.py  test_platform_utils.py  test_result.py  test_runner.py  test_suppression.py
